--- a/sass/style..scss
+++ b/sass/style..scss
@@ -7,7 +7,7 @@ html {
     margin: 0;
     padding: 0;
     position: relative;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 body {
@@ -46,9 +46,16 @@ body {
     object-fit: cover;
 }
 
-.swiper {
-    margin-left: auto;
-    margin-right: auto;
+.swiper-slide {
+    width: 80%;
+}
+
+.swiper-slide:nth-child(2n) {
+    width: 60%;
+}
+
+.swiper-slide:nth-child(3n) {
+    width: 40%;
 }
 
 .main-background {
